fix paragraph spacing

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -49,12 +49,12 @@ h3,
 h4,
 h5,
 h6 {
-  margin-bottom: 16px;
+  margin-bottom: 32px;
   line-height: 1.3;
 }
 
 p {
-  margin-bottom: 16px;
+  margin-bottom: 32px;
   line-height: 1.5;
 }
 
